<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_task">Добавить задачу</string>
    <string name="empty">Nothing to show</string>
    <string name="no_data">Список пусть!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_task">Изменить задачу</string>

    <string name="signin">Вход</string>
    <string name="signup">Регистрация</string>

    <string name="tehron_shoh_example_com">tehron_shoh@example.com</string>
    <string name="password_hint">•••••••••</string>

    <string name="signin_button_text">Войти</string>
    <string name="signup_button_text">Зарегистрироваться</string>

    <string name="you_have_not_acc_signup">У вас нет аккаунта? Регистрация</string>
    <string name="you_have_acc_signin">У вас есть аккаунт? Вход</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Выйти</string>
    <string name="data">Мои данные</string>

    <string name="waiting">Ожидание</string>
    <string name="in_process">В процессе</string>
    <string name="done">Завершена</string>
    <string name="closed">Закрыта</string>

    <string name="status">Статус:</string>
    <string name="assignee">Исполнитель:</string>
    <string name="creator">Постановщик:</string>
    <string name="you_can_not_edit">Вы не сможете редактировать!</string>
    <string name="you_can_status_edit">Вы сможете редактировать статус!</string>
    <string name="history_was_updated">Статус был поменен в:</string>
    <string name="history_empty">У задачи нет истории изменений.</string>
    <string name="comments_empty">У задачи нет комментариев.</string>
</resources>