<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:background="@color/transpater"
    tools:context=".presentation.ui.add_update.UpdateFragment">

    <TextView
        android:id="@+id/allow_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/due_date_color"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/title"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/description"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:minHeight="100dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/statusInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout" />

            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@id/statusInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/statusInputLayout"
                app:layout_constraintTop_toTopOf="@id/statusInputLayout" />

            <!-- Date Picker for dueDate -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dueDateInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="Дедлайн"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusInputLayout" >

                <EditText
                    android:id="@+id/dueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/assigneeInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/assignee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dueDateInputLayout" />

            <Spinner
                android:id="@+id/assigneeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@id/assigneeInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/assigneeInputLayout"
                app:layout_constraintTop_toTopOf="@id/assigneeInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/update_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:text="@string/update_task"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintEnd_toStartOf="@id/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="history"
        android:src="@drawable/baseline_history_24"
        android:background="@color/transpater"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/comments"
        app:layout_constraintTop_toTopOf="@id/update_button"
        app:layout_constraintBottom_toBottomOf="@id/update_button" />

    <ImageButton
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="comments"
        android:src="@drawable/baseline_comment_24"
        android:background="@color/transpater"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/update_button"
        app:layout_constraintBottom_toBottomOf="@id/update_button" />

</androidx.constraintlayout.widget.ConstraintLayout>